# odoo-postman

./: .replit  README.md  Setup_odoo_with_postman.sh  ebms.sh  odoo.conf  odoo_enterprise_postman_collection.json  package-lock.json  package.json  pyproject.toml  replit.nix  script_name.sh
