[tool.poetry]
name = "odoo-postman"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "odoo_postman"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.32.3"
flask = "3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
